--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
-Emad Anwer <emadanwer.official@gmail.com>
-Kholoud Fattem <kfattem@gmail.com>
+Emad Ahmed <emadanwer.official@gmail.com>
+Kholoud Elsaedy <kfattem@gmail.com>
